fix: small thingy

--- a/entries/ntr.html
+++ b/entries/ntr.html
@@ -111,11 +111,11 @@
             <h4 id="specs">Specs, CUZ IT TRENDY</h4>
             <ul>
                 <li>Model: Lenovo ThinkPad X220</li>
+                <li>Display: 12.5" 1366x768 TN Matte</li>
                 <li>CPU: Intel Core i5-2520M @ 2.50GHz</li>
                 <li>GPU: Intel HD Graphics 3000</li>
                 <li>Disk: 320GB SATA HDD</li>
                 <li>Memory: 4GB DDR3-1333</li>
-                <li>Display: 12.5" 1366x768 TN Matte</li>
             </ul>
 
             <h4 id="setup">Setup, CUZ IT VITAL</h4>
@@ -367,7 +367,7 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
             </blockquote>
 
             <h4 id="installing-packages">Installing Packages</h4>
-            <pre><code>xbps-install -S niri waybar tofi mako feh ly foot foot-terminfo ghostty grim slurp wl-clipboard swaybg swayidle qutebrowser librewolf micro helix limine linux-firmware-intel mesa-dri xdg-desktop-portal-wlr xdg-desktop-portal-gtk git gcc make python3 python3-pip zsh
+            <pre><code>xbps-install -S niri waybar tofi mako feh ly foot foot-terminfo ghostty grim slurp wl-clipboard swayidle qutebrowser librewolf micro helix limine zsh...
 </code></pre>
 
             <hr />
