add&fix: core packages done, i think

--- a/entries/ntr.html
+++ b/entries/ntr.html
@@ -172,26 +172,6 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                     >
                 </li>
                 <li>
-                    Wallpaper Setter:
-                    <a
-                        href="https://feh.finalrewind.org/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        class="view-more"
-                        >feh</a
-                    >
-                </li>
-                <li>
-                    Screensaver/Lock:
-                    <a
-                        href=""
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        class="view-more"
-                        >x</a
-                    >
-                </li>
-                <li>
                     Display Manager:
                     <a
                         href="https://codeberg.org/fairyglade/ly"
@@ -199,6 +179,26 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                         rel="noopener noreferrer"
                         class="view-more"
                         >ly</a
+                    >
+                </li>
+                <li>
+                    Lockscreen:
+                    <a
+                        href="https://isaacfreund.com/software/waylock/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="view-more"
+                        >waylock</a
+                    >
+                </li>
+                <li>
+                    Bootloader:
+                    <a
+                        href="https://github.com/limine-bootloader/limine"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="view-more"
+                        >limine</a
                     >
                 </li>
 
@@ -320,13 +320,31 @@ echo 'i915.enable_psr=0 i915.fastboot=1' >> /etc/modprobe.d/i915.conf
                 <br />
 
                 <li>
-                    Bootloader:
+                    Wallpaper Setter:
                     <a
-                        href="https://github.com/limine-bootloader/limine"
+                        href="https://feh.finalrewind.org/"
                         target="_blank"
                         rel="noopener noreferrer"
                         class="view-more"
-                        >limine</a
+                        >feh</a
+                    >
+                </li>
+                <li>
+                    Screensaver:
+                    <a
+                        href="https://github.com/GhostNaN/mpvpaper"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="view-more"
+                        >mpvpaper</a
+                    >
+                    +
+                    <a
+                        href="https://github.com/swaywm/swayidle"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="view-more"
+                        >swayidle</a
                     >
                 </li>
                 <li>
